update the sidebar

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
               <nav class="nav nav-pills flex-column intro mt-5">
                 <a
                   class="green text-decoration-none fw-bold text-uppercase"
+                  style="font-weight : 100"
                   href="#item-1"
                   >Introduction</a
                 >
@@ -175,6 +176,7 @@
                 
                   <a class="green text-decoration-none fw-bold text-uppercase"
                   href="#ref"
+                  style="font-weight: 100;"
                   >Reference</a>
                   <a class="nav-link p-0 my-1 head task " href="#task-title"
                   >Task</a>
