--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="row page-container">
           <div class="col-1   sidebar position-fixed start-0  h-100 d-none d-lg-block mt-lg-3 " >
             <div>
-              <div class="links d-flex justify-content-start align-items-center " style="width : 200px; ">
+              <div class="links d-flex justify-content-start align-items-center ">
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"><path d="M8 10.846v-5.85C8 4.445 8.444 4 9 4c.552 0 1 .456 1 .995v5.939l1.523-1.371a.993.993 0 0 1 1.405.08 1 1 0 0 1-.067 1.406l-2.986 2.69a.984.984 0 0 1-.729.25 1.024 1.024 0 0 1-.298 0 .98.98 0 0 1-.625-.25l-2.987-2.69a.993.993 0 0 1-.067-1.406 1 1 0 0 1 1.406-.08L8 10.846ZM9 18A9 9 0 1 0 9 0a9 9 0 0 0 0 18Z" fill="#9AA4B2"/></svg>
                   <div style="margin-left : 20px">
                 <a href="#" class="text-decoration-none fw-bold"
